2012-11-20  Kentaro Hara  <haraken@chromium.org>

        [V8] Introduce GenerateConstructorHeader() to CodeGeneratorV8.pm
        https://bugs.webkit.org/show_bug.cgi?id=102806

        Reviewed by Adam Barth.

        This is an incremental step for introducing constructorCallbackCustom().
        (See bug 102763.) This patch adds GenerateConstructorHeader()
        that generates a common code for constructors.

        No tests. No change in behavior.

        * bindings/scripts/CodeGeneratorV8.pm:
        (GenerateOverloadedConstructorCallback):
        (GenerateSingleConstructorCallback):
        (GenerateEventConstructorCallback):
        (GenerateNamedConstructorCallback):
        (GenerateConstructorHeader):

2012-11-20  Ryosuke Niwa  <rniwa@webkit.org>

        HTMLCollection's cache should not be invalidated when id or name attributes are changed
        https://bugs.webkit.org/show_bug.cgi?id=102843

        Reviewed by Eric Seidel.

        When an id or name attribute changes, only invaliate id and name cache maps when the collection
        doesn't depend on id and name attributes (e.g. document.images).

        Unfortunately, I could not create a reliable test for this performance problem.

        * dom/DynamicNodeList.cpp:
        (WebCore::DynamicNodeListCacheBase::invalidateIdNameCacheMaps):
        * dom/DynamicNodeList.h:
        (WebCore::DynamicNodeListCacheBase::invalidateCache):
        (DynamicNodeListCacheBase):
        * dom/ElementRareData.h:
        (WebCore::ElementRareData::clearHTMLCollectionCaches):
        * html/HTMLCollection.cpp:
        (WebCore::invalidationTypeExcludingIdAndNameAttributes):

2012-11-20  Adam Klein  <adamk@chromium.org>

        [v8] Avoid unnecessary call to ToObject() in Callback constructors
        https://bugs.webkit.org/show_bug.cgi?id=102831

        Reviewed by Adam Barth.

        The code already asserted that the argument was an object, so calling